<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FocusTime</string>

    <string name="content6" translatable="false">使用辅助功能探测当前窗口变化</string>

    <string name="detection_service_des">This service helps to detect any apps that is on the foreground. \nPlease enable it so that FocusTime can function normally.</string>

    <!-- Label for the motto preference -->
    <string name="pref_motto_label">Set your motto</string>

    <!-- Key name for storing size in SharedPreferences -->
    <string name="pref_motto_key" translatable="false">motto_key</string>

    <!-- Default for size preference -->
    <string name="pref_motto_default">One today is worth two tomorrows.</string>

    <string name="alarm_goes_off" translatable="false">Alarm goes off</string>

    <string name="pref_category_blacklist_apps_title">apps that will be disable during FocusTime</string>

    <string name="pref_category_motto_title">motto</string>

    <string name="pref_on">On</string>
    <string name="pref_off">Off</string>

    <string name="pref_category_reminder">time reminder</string>

    <string name="pref_reminder_label">Set reminder</string>

    <string name="pref_reminder_key" translatable="false">reminder_key</string>

    <string name="successfully_set_reminder">Successfully set FocusTime reminder</string>

    <string name="pref_force_quit_key" translatable="false">force_quit_key</string>

    <string name="start_button">start</string>
    <string name="cancel">Cancel</string>
    <string name="you_have_alr_focused">You have already focused for</string>
    <string name="delete_all_entries">delete all entries</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="todo">todo</string>
    <string name="settings">Settings</string>
    <string name="how_to_use">How to use?</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="a_little_punishment">This is a little punishment for not being focus!</string>
    <string name="your_dream_futher">Your dream is getting further away from you. Work hard to catch up!</string>
    <string name="this_music_not_stop">This music won\'t stop until it finishes playing.</string>
    <string name="a_bit_empty">It\'s a bit empty here.</string>
    <string name="start_todo">Start by creating your first todo task!</string>
    <string name="please_enter_time">Please enter the time</string>
    <string name="invalid_number">Invalid number</string>
    <string name="relax">FocusMode ended. Relax for a while!</string>
    <string name="mode_started">You are in FocusMode now!</string>
    <string name="quit_mode">Quitting FocusMode</string>
    <string name="sure_to_quit">You will get punished. Are you sure to quit it?</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="accessibility">Accessibility service</string>
    <string name="please_open_access">Please turn on FocusTime accessibility service in Settings for FocusTime to function normally.</string>
    <string name="cannot_open_app">This app is not allowed in FocusMode</string>
    <string name="add_todo">Add new todo</string>
    <string name="edit_todo">Edit todo</string>
    <string name="insert_fail">Insert todo failed</string>
    <string name="insert_suc">Insert todo successfully</string>
    <string name="edit_fail">Edit todo failed</string>
    <string name="edit_suc">Edit todo successfully</string>
    <string name="del_fail">Delete todo fail</string>
    <string name="del_suc">Delete todo successfully</string>
    <string name="cannot_exit">You can\'t exit</string>
    <string name="delete_all">Delete all entries?</string>
    <string name="set_motto_suc">Set motto successfully</string>
    <string name="total_time_summary"><xliff:g example="10" id="days">%s</xliff:g>days, <xliff:g example="10" id="hour">%s</xliff:g>hour, <xliff:g example="10" id="min">%s</xliff:g>min, <xliff:g example="10" id="sec">%s</xliff:g>sec.</string>
    <string name="min_hint">MIN</string>
    <string name="sec_hint">SEC</string>
    <string name="blacklist">Blacklisted apps</string>
    <string name="pref_app_you_want_key" translatable="false">app_you_want_key</string>
    <string name="click_access">Please click on Service/FocusTime</string>
    <string name="punishment">Punishment</string>
    <string name="time_reminder_notification_title">It\'s time to focus!</string>
    <string name="time_reminder_notification_body">There\'s never a better time to focus than now. Come on!</string>
    <string name="disable">Disabled</string>
    <string name="enable">Enabled</string>
    <string name="iam_sorry">I\'m sorry</string>
    <string name="quited_focusmode">Quited FocusMode</string>
    <string name="you_have_quit">You\'ve quited FocusMode last time. You are getting punishment.</string>
    <string name="cannot_change_blacklist">FocusMode is started. You can\'t change blacklisted apps now.</string>
    <string name="remember_blacklist">Did you remember to set blacklisted apps?</string>
    <string name="i_did">Yes, I did</string>
    <string name="forgot">No, I forgot</string>
    <string name="reminder">Reminder</string>
    <string name="set_blacklist_reminder">Set blacklist reminder</string>
    <string name="set_blacklist_reminder_key" translatable="false">key_show_blacklist_dialog_apps</string>
    <string name="opening">FocusTime helps you avoid distractions of phones by blocking a list of apps in a certain period of time.</string>
    <string name="focusmode">FocusMode</string>
    <string name="focusmode_des">1. You can set the length of focus time in FocusMode on your own.
\n2. You can set your own blacklist for apps that will be disabled in FocusMode.</string>
    <string name="punishment_des">1. Once you have entered FocusMode, you will be punished by an unstoppable 1-minute-long music for quitting.
        \n2. If you force FocusTime to stop and remove it from the recent application list by swiping during FocusMode,
        you will still get punished when you open FocusTime the next time.</string>
    <string name="todo_des"> You can create a ToDo list for managing your work.
    \nYou can swipe to delete a todo task.</string>
    <string name="other_des">1. Your total focus time will be recorded.
   \n2. You can customize your motto in settings
   \n3. You can open blacklist reminder to remind you set up blacklisted apps before FocusMode starts.
   \n4. FocusTime now supports two languages. English and Chinese. If the system is other languages other than English or Chinese, it will use the English version by default.
</string>
    <string name="others">others</string>
</resources>
